change in home32.html

--- a/home32.html
+++ b/home32.html
@@ -38,7 +38,8 @@
     </section>
      
     <section>
-        <div class="marquehead"> <marquee behavior="" direction="right"> Welcome To AgroExchangeCrops</marquee></div>
+        <div class="marquehead"> <marquee behavior="" direction="right" style="padding-top: 30px;">
+             Welcome To AgroExchangeCrops</marquee></div>
         <div class="photohead">
             <div class="photohead1"> <img src="amasakaA.jpg" alt=""></div>
             <div class="photohead1"> <img src="ibigoriA.jpg" alt=""></div>
